# opengl-graphics-common

./: CMakeLists.txt  README.md
include/: common.hxx  gl-common.hxx  glew-common.hxx  glfw-common.hxx  obj_loader.hxx  shader.hxx  waypoint.hxx
shaders/: colour-fragment-shader.glsl  colour-vertex-shader.glsl  texture-fragment-shader.glsl  texture-vertex-shader.glsl
src/: common.cxx  gl-common.cxx  glew-common.cxx  glfw-common.cxx  obj_loader.cxx  shader.cxx  waypoint.cxx
